<resources>
    <string name="app_name">Dicoding MyStory</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="logout">Keluar</string>
    <string name="greeting" translatable="false">Halo %1$s,</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini</string>
    <string name="title_welcome_page">Selamat datang di Dicoding MyStory!</string>
    <string name="message_welcome_page">Mau belajar berbagi cerita menggunakan foto dan juga deskripsi, dapat bergabung dengan Dicoding MyStory </string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="name">Nama</string>
    <string name="setting">Pengaturan</string>
    <string name="story">Deskripsi story</string>
    <string name="cameraX" translatable="false">CameraX</string>
    <string name="gallery" translatable="false">Gallery</string>
    <string name="post_story">Posting Cerita Anda Disini</string>
    <string name="insert">Masukkan Story</string>
    <string name="login_here">Masuk Disini</string>
    <string name="allready_account">Sudah punya akun ?</string>
    <string name="no_account">Belum punya akun ?</string>
    <string name="register_here">Daftar Disini</string>
    <string name="title_login_page">Sudah siap untuk berbagi cerita ?</string>
    <string name="message_login_page">Masuk dibawah ini</string>
    <string name="ganti_bahasa">Ganti Bahasa</string>
    <string name="detail_activity">Aktivitas Detail</string>
    <string name="back">Kembali</string>
    <string name="guest">Post Tamu</string>
    <string name="or">Atau</string>
    <!--Get String -->
    <string name="story_not_found">Cerita tidak ditemukan</string>
    <string name="story_id_missing">ID cerita tidak ada</string>
    <string name="story_id_log">ID Cerita: %1$s</string>
    <string name="image_capture_error">Error Pengambilan Gambar</string>
    <string name="camera_open_error">Kesalahan Membuka Kamera</string>
    <string name="error_empty_email">Harap isi "Email" terlebih dahulu</string>
    <string name="error_empty_password">Harap isi "Password" terlebih dahulu</string>
    <string name="error_invalid_email">"Email" harus valid menggunakan @</string>
    <string name="error_short_password">Password harus memiliki setidaknya 8 karakter</string>
    <string name="login_failed_title">Login Gagal</string>
    <string name="login_failed_message">Email atau Password yang anda masukkan salah</string>
    <string name="retry">Coba Lagi</string>
    <string name="error_empty_name">Harap isi "Nama" terlebih dahulu</string>
    <string name="register_success_title">Pendaftaran Berhasil</string>
    <string name="register_success_message">Pendaftaran berhasil, Silahkan Masuk Menggunakan Akun Terdaftar</string>
    <string name="continuee">Lanjut</string>
    <string name="register_failed_title">Maaf...</string>
    <string name="hello" translatable="false">Hello, %1$s</string>
    <string name="logout_title">Keluar</string>
    <string name="logout_message">Apakah Anda yakin ingin keluar?</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>
    <string name="error_post_story">Error Membuat Postingan Story</string>
    <string name="permission_success">Permission Berhasil</string>
    <string name="permission_failed">Permission Gagal</string>
    <string name="error_reduce_image">Gagal Mengurangi Ukuran</string>
    <string name="empty_photo_or_description">Harap isi foto atau deskripsi terlebih dahulu</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satelite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
</resources>